--- a/index.html
+++ b/index.html
@@ -158,7 +158,7 @@
 									 style="width: 980px; font-weight: bold; border-collapse: collapse; background-color: #ffffff;">
 							<tr>
 								<td
-										style="padding: 35px 27px; text-align:right; font-size:28px; letter-spacing:3px;">
+										style="padding: 25px 27px; text-align:right; font-size:28px; letter-spacing:3px;">
 									本期主題</td>
 							</tr>
 						</table>
@@ -190,7 +190,7 @@
 									 style="width: 980px; font-weight: bold; border-collapse: collapse;">
 							<tr>
 								<td width="550"
-										style="background-color: #FFF4D2; padding: 35px 35px; font-size: 18px;">
+										style="background-color: #FFF4D2; padding: 20px 35px; font-size: 16px;">
 									以「台灣演藝坊」打響知名度的草屯演藝中心,受疫情影與廠商終止
 									合約後,僅零星出租營運陷入停滯已逾兩年,長林明溱17日偕立委許
 									淑華、長簡景賢、文化局長林榮森實地會勘,大嘆有750個舒適座位
@@ -205,7 +205,8 @@
 								</td>
 								<td width="360"
 										style="background-color: #FFF4D2; padding: 0px; vertical-align: top;">
-									<img style="width: 360px;" src="./image/2-pic3.png" alt="">
+									<img style="width: 360px; display: block; margin: 0;"
+											 src="./image/2-pic3.png" alt="">
 								</td>
 							</tr>
 						</table>
@@ -239,7 +240,7 @@
 									 style="width: 980px; font-weight: bold; border-collapse: collapse;">
 							<tr>
 								<td width="550"
-										style="background-color: #FFF4D2; padding: 35px 35px; font-size: 18px;">
+										style="background-color: #FFF4D2; padding: 20px 35px; font-size: 16px;">
 									為期近一個月的2022南投燈會,吸引逾300萬名遊客前來參觀,活動期
 									間保守估計帶來11億以上衍生的經濟消費,整體滿意度高達到96。
 									長林明湊20日晚間在主燈舞台區主持燈會閉幕活動及「南投玩很大千千
@@ -256,7 +257,8 @@
 								</td>
 								<td width="360"
 										style="background-color: #FFF4D2; padding: 0px; vertical-align: top;">
-									<img style="width: 360px;" src="./image/2-pic4.png" alt="">
+									<img style="width: 360px; display: block; margin: 0;"
+											 src="./image/2-pic4.png" alt="">
 								</td>
 							</tr>
 						</table>
@@ -278,7 +280,7 @@
 									 style="width: 980px; font-weight: bold; border-collapse: collapse; background-color: #ffffff;">
 							<tr>
 								<td
-										style="padding: 35px 27px; text-align:right; font-size:28px; letter-spacing:3px;">
+										style="padding: 25px 27px; text-align:right; font-size:28px; letter-spacing:3px;">
 									其他相關新聞</td>
 							</tr>
 						</table>
@@ -290,7 +292,7 @@
 											 src="./image/2-pic6.png" alt="">
 								</td>
 								<td width="640"
-										style="background-color: #FFF4D2; vertical-align: middle; width: 640px; padding-left: 20px; font-family: Microsoft JhengHei;">
+										style="background-color: #FFF4D2; vertical-align: middle; width: 640px; padding-left: 20px; font-family: Microsoft JhengHei; font-size: 16px;">
 									<ul style="margin: 0;">
 										<li style="padding: 5px 10px;">
 											<a style="color: #333333; text-decoration: none;"
@@ -337,7 +339,7 @@
 							<tr>
 								<td
 										style="padding: 0; width: 980px; text-align: center;  padding: 5px 0px; font-family: Microsoft JhengHei;">
-									電話：049-2222106-9　傳真：049-2238404　最佳瀏覽環境 1024 x 768 視窗模式，IE5.0
+									電話：049-2222106-9 傳真：049-2238404 最佳瀏覽環境 1024 x 768 視窗模式，IE5.0
 									以上版本與 Firefox 瀏覽器</td>
 							</tr>
 							<tr>
